app/assets/stylesheets/partials/modules/_stores-maps.scss
/* ... */
      /* Filters */

      /* 'Categories' and 'Gift card toggle' */
      .stores-maps__filters {
        float: left;

        @include respond-min($ipad-landscape) {
          float: none;
        }

        /* Non JS Users */
        .no-js & {float: none;}

        /* Hide when in map view */
        .is-map-view & {
          display: none;

          @include respond-min($ipad-landscape) {
            display: block;
          }
        }

          /* Increase right padding for drop down trigger at this breakpoint */
          @include respond-min($non-palm) {
            .drop-down-menu__trigger {@include to-em(padding-right, $spacing-dbl+$spacing-base);}
          }

          /* Gift card toggle */
          .btn--main-checkbox-toggle {

            /* Reveal text at this breakpoint */
            @include respond-min($non-palm) {
              .hide-visually {@include hide-visually-off;}
            }

            .icon--gift-card:before {
              color: #fff;
              @include to-rem(margin-left, $spacing-quarter);
            }
          }

          /* Applied filter tag */
          .tags__btn {
            background-color: $color-grey-light-2;

            /* Increase `max-width` at these breakpoints */
            @include respond-min(400) {
              @include to-rem(max-width, 174);
            }

            @include respond-min($iphone-landscape) {
              @include to-rem(max-width, 213);
            }

            /* Button text (truncate) */
            .txt-truncate {
              @include to-em(padding-top, $spacing-half+$spacing-micro);
              @include to-em(padding-bottom, $spacing-half+$spacing-micro+1);
            }
          }
      }

        /* Filter items */
        .stores-maps__filters__item {
          display: inline-block;
          vertical-align: middle;
          @include to-rem(margin-right, $spacing-half);

          &:last-child {margin-right: 0;}

          /* Non JS users */
          .no-js & {
            display: block;
            margin-right: 0;
            @extend %mrg-base;
          }
        }

        /* Show hidden text for non JS users */
        .no-js {
          .stores-maps__intro,
          .drop-down-menu__list .btn .hide-visually {@include hide-visually-off;}

          .drop-down-menu__list .btn .hide-visually {
            font-style: italic;
            opacity: 0.8;
          }
        }

      /* Toggle button */
      .stores-maps__toggle {
        float: right;

        /* Reveal button text, float right and fix a width at this breakpoint */
        @include respond-min($non-palm) {
          @include to-rem(min-width, 120);

          /* Link version */
          &.stores-maps__toggle--link {@include to-rem(min-width, 106);}

          /* Reveal button text */
          .hide-visually {@include hide-visually-off;}
        }

        /* Hide at this breakpoint */
        @include respond-min($ipad-landscape) {
          display: none;
        }

        /* Non JS users */
        .no-js & {display: none;}

          /* Left spacing for icon at this breakpoint */
          @include respond-min($non-palm) {
            .icon {@include to-rem(margin-left, $spacing-base);}
          }

          /* Hide/show icons */
          .icon--list {display: none;}

          /* Map view */
          .is-map-view & {
            .icon--map2 {display: none;}
            .icon--list {display: inline-block;}
          }
      }
/* ... */

